--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,11 +11,11 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
-          go-version: '1.23'
+          go-version-file: 'go.mod'
       - name: Run Go linters
         uses: golangci/golangci-lint-action@v3
         with:
-          args: --verbose
+          args: --verbose --timeout=5m
           skip-pkg-cache: true
   unit-tests:
     runs-on: ubuntu-latest
@@ -23,6 +23,31 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
-          go-version: '1.23'
+          go-version-file: 'go.mod'
       - name: Run tests
         run: go test -race ./...
+  integration-test:
+    strategy:
+      matrix:
+        dialect: [mysql, postgres, sqlite, mssql, oracle]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v4
+        with:
+          go-version: '1.23'
+      - uses: ariga/setup-atlas@v0
+      - working-directory: internal/testdata
+        run: |
+          atlas migrate diff --env bun --var dialect=${{ matrix.dialect }}
+        env:
+          ATLAS_TOKEN: ${{ secrets.ATLAS_TOKEN }}
+      - name: Verify migrations generated
+        run: |
+          status=$(git status --porcelain)
+          if [ -n "$status" ]; then
+            echo "you need to run 'atlas migrate diff --env bun' and commit the changes"
+            echo "$status"
+            git --no-pager diff
+            exit 1
+          fi
