--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,7 +29,7 @@ jobs:
   integration-test:
     strategy:
       matrix:
-        dialect: [mysql, postgres, sqlite, mssql, oracle]
+        dialect: [mysql, postgres, sqlite, mssql]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
