--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,6 +42,11 @@ jobs:
           atlas migrate diff --env bun --var dialect=${{ matrix.dialect }}
         env:
           ATLAS_TOKEN: ${{ secrets.ATLAS_TOKEN }}
+      - working-directory: internal/testdata/m2m
+        run: |
+          atlas migrate diff --env bun --var dialect=${{ matrix.dialect }}
+        env:
+          ATLAS_TOKEN: ${{ secrets.ATLAS_TOKEN }}
       - name: Verify migrations generated
         run: |
           status=$(git status --porcelain)
